Start using JDK Dynalink